--- a/apps/gophercon-korea-web-25/public/index.html
+++ b/apps/gophercon-korea-web-25/public/index.html
@@ -48,6 +48,18 @@
 
     <!-- Naver -->
     <meta name="naver-site-verification" content="800ac9769224e7e4ed567fdabd7ff9708a748536" />
+
+    <!-- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T8BMXV9ZPX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-T8BMXV9ZPX");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
