--- a/apps/gophercon-korea-web-25/public/index.html
+++ b/apps/gophercon-korea-web-25/public/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Favicon -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="https://gophercon.kr/favicon.svg" type="image/svg+xml" />
     <link
       rel="stylesheet"
       as="style"
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
-    <link rel="alternate icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="alternate icon" href="https://gophercon.kr/favicon.ico" />
+    <link rel="apple-touch-icon" href="https://gophercon.kr/logo192.png" />
 
     <!-- Manifest -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="https://gophercon.kr/manifest.json" />
 
     <!-- SEO Meta Tags -->
     <title>GopherCon Korea 2025</title>
@@ -32,7 +32,7 @@
     <meta property="og:url" content="https://gophercon.kr/" />
     <meta property="og:title" content="GopherCon Korea 2025" />
     <meta property="og:description" content="The largest annual conference for Go language users in South Korea." />
-    <meta property="og:image" content="%PUBLIC_URL%/ogImage.png" />
+    <meta property="og:image" content="https://gophercon.kr/ogImage.png" />
     <meta property="og:site_name" content="GopherCon Korea 2025" />
     <meta property="og:locale" content="ko_KR" />
 
@@ -44,7 +44,7 @@
       property="twitter:description"
       content="The largest annual conference for Go language users in South Korea."
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/ogImage.png" />
+    <meta property="twitter:image" content="https://gophercon.kr/ogImage.png" />
 
     <!-- Naver -->
     <meta name="naver-site-verification" content="800ac9769224e7e4ed567fdabd7ff9708a748536" />
